# github-MCP-practice

./: .cz.toml  .pre-commit-config.yaml  Makefile  README.md  git_workflow.html  mcp_chat_interface.html  mcp_test_file.txt  mcp_web_interface.html  pyproject.toml  requirements.txt  test_feature.py  test_git_workflow.py  test_mcp_commit.py  test_pygithub.py  test_pygithub.txt  test_request.json  test_simple_commit.py  test_simple_git.py
.cursor/: MCP_CLIENT_PLAN.md  PROJECT_PLAN.md  README.md  cursor_ide_guide.md  mcp_server_development_guide.md
.cursor/rules/: README.md  code_quality_guide.md  git_workflow_guide.md  mcp_client_development.md  project_plan_based_work.md  python_project_structure.md
.github/workflows/: ci.yml
docs/: MCP_TOOL_PATTERNS.md  README.md  TROUBLESHOOTING.md  decorator_troubleshooting.md  import_error_troubleshooting.md  mcp_connection_troubleshooting.md  mcp_context_management.md  testing_guide.md  troubleshooting_template.md
mcp_client/: __init__.py  config.py  langgraph_agent.py  main.py  mcp_client.py  openai_adapter.py  rpc.py  rpc_config.py  schemas.py
mcp_client/agent/: __init__.py  workflow.py
mcp_github/: __init__.py  github_client.py  resources.py  server.py  tools_local_git.py  tools_read.py  tools_write.py  utils.py
mcp_test/: direct_tool_test.md  hello_mcp.md  mcp_commit_test.md
tests/: __init__.py  conftest.py  test_tools.py
tests/integration/: test_resources.py
tests/unit/: test_github_client.py  test_github_client_advanced.py  test_tools_read.py  test_tools_write.py  test_utils.py
